14731
I try to compile the following code with -Yspecialize switch:
```scala
class Test[@specialized A] {
  val array: Array[A] = new Array[A](10)
}
```

I get error:
```scala
Test.scala:2: error: cannot find class manifest for element type A
  val array: Array[A] = new Array[A](10)
                        ^
one error found
```

sorry if I missed some new arrays behaviour in 2.8, is there a way to allocate a new generic array?
